--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-./foundrydata/Logs
-./foundrydata/Config/options.json.lock
-./foundrydata/Config/license
+foundrydata/Logs
+foundrydata/Config/options.json.lock
+foundrydata/Config/license.json
